@@ -19,13 +19,16 @@ package com.hedera.node.app.spi.meta;
 import static java.util.Objects.requireNonNull;
 
 import com.hedera.node.app.spi.key.HederaKey;
+import com.hedera.node.app.spi.workflows.PreHandleContext;
 import com.hederahashgraph.api.proto.java.AccountID;
 import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
+import com.hederahashgraph.api.proto.java.SignatureMap;
 import com.hederahashgraph.api.proto.java.TransactionBody;
+import com.swirlds.common.crypto.TransactionSignature;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 /**
  * Metadata collected when transactions are handled as part of "pre-handle". This happens with
@@ -37,41 +40,40 @@ import java.util.Set;
  * @param payer payer for the transaction
  * @param status {@link ResponseCodeEnum} status of the transaction
  * @param payerKey payer key required to sign the transaction. It is null if payer is missing
- * @param requiredNonPayerKeys list of keys that are required to sign the transaction, in addition
- *     to payer key
- * @param readKeys the keys that were read during pre-handle
+ * @param innerMetadata {@link TransactionMetadata} of the inner transaction (where appropriate)
  */
 public record TransactionMetadata(
         @Nullable TransactionBody txnBody,
+        @Nullable SignatureMap signatureMap,
         @Nullable AccountID payer,
         @NonNull ResponseCodeEnum status,
         @Nullable HederaKey payerKey,
-        @NonNull List<HederaKey> requiredNonPayerKeys,
-        @Nullable Object handlerMetadata,
-        @NonNull List<ReadKeys> readKeys) {
+        @NonNull List<HederaKey> otherPartyKeys,
+        @Nullable List<TransactionSignature> cryptoSignatures,
+        @Nullable TransactionMetadata innerMetadata) {
 
     public TransactionMetadata {
         requireNonNull(status);
-        requireNonNull(requiredNonPayerKeys);
-        requireNonNull(readKeys);
     }
 
-    public TransactionMetadata(@NonNull final PreHandleContext context, @NonNull final List<ReadKeys> readKeys) {
+    public TransactionMetadata(
+            @NonNull final PreHandleContext context,
+            @NonNull final SignatureMap signatureMap,
+            @NonNull final List<TransactionSignature> cryptoSignatures,
+            @Nullable final TransactionMetadata innerMetadata) {
         this(
                 requireNonNull(context).getTxn(),
+                requireNonNull(signatureMap),
                 context.getPayer(),
                 context.getStatus(),
                 context.getPayerKey(),
                 context.getRequiredNonPayerKeys(),
-                context.getHandlerMetadata(),
-                readKeys);
+                requireNonNull(cryptoSignatures),
+                innerMetadata);
     }
 
-    public TransactionMetadata(
-            @Nullable final TransactionBody txBody,
-            @Nullable final AccountID payerID,
-            @NonNull final ResponseCodeEnum status) {
-        this(txBody, payerID, status, null, List.of(), null, List.of());
+    public TransactionMetadata(@NonNull final ResponseCodeEnum status) {
+        this(null, null, null, status, null, Collections.emptyList(), Collections.emptyList(), null);
     }
 
     /**
@@ -81,28 +83,5 @@ public record TransactionMetadata(
      */
     public boolean failed() {
         return status != ResponseCodeEnum.OK;
-    }
-
-    /**
-     * An entry of read keys for a single {@link com.hedera.node.app.spi.state.ReadableKVState}
-     *
-     * <p>Each entry in the list consists of the {@code statesKey} (which identifies the {@link
-     * com.hedera.node.app.spi.state.ReadableStates}), the {@code stateKey} (which identifies the
-     * {@link com.hedera.node.app.spi.state.ReadableKVState}, and the {@link Set} of keys, that were
-     * read.
-     *
-     * @param statesKey index that identifies the {@link
-     *     com.hedera.node.app.spi.state.ReadableStates}
-     * @param stateKey index that identifies the {@link
-     *     com.hedera.node.app.spi.state.ReadableKVState}
-     * @param readKeys {@link Set} of all keys that were read
-     */
-    public record ReadKeys(
-            @NonNull String statesKey, @NonNull String stateKey, @NonNull Set<? extends Comparable<?>> readKeys) {
-        public ReadKeys {
-            requireNonNull(statesKey);
-            requireNonNull(stateKey);
-            requireNonNull(readKeys);
-        }
     }
 }
